<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_username1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/usernameAT"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/login" />
</LinearLayout>

    <!--This will format any xml file-->
    <!--option + cmd + "L"-->