<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.OtherUserProfile.OtherUserProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/otherUserProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/userImageContentDescription" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/otherUserProfilePicture"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/otherUsersFullName"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="5dp"
                    android:layout_weight="1"
                    android:text="@string/homePageTitle"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/otherUsersAlias"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="5dp"
                    android:layout_weight="1"
                    android:text="@string/homePageTitle"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/otherUserfolloweeCount"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:paddingHorizontal="15sp"
                    android:text="@string/followeeCount"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/otherUserfollowerCount"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginVertical="10dp"
                    android:layout_weight="1"
                    android:paddingHorizontal="15sp"
                    android:text="@string/followerCount"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/FollowUnFollowButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:text="@string/follow_OR_unfollow" />
        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/otherUser_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/otherUser_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="232dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>